--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,8 @@
 
 # dependencies
 /node_modules
+/frontend/node_modules
+/backend/node_modules
 /.pnp
 .pnp.*
 .yarn/*
@@ -12,30 +14,118 @@
 
 # testing
 /coverage
+/frontend/coverage
+/backend/coverage
 
 # next.js
 /.next/
 /out/
+/frontend/.next/
+/frontend/out/
 
 # production
 /build
+/frontend/build
+/backend/dist
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# logs
+/logs
+/frontend/logs
+/backend/logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
+pnpm-debug.log*
+/backend/dist/*.log
 
 # env files (can opt-in for committing if needed)
-.env*
+.env
+.env.*
+/frontend/.env
+/frontend/.env.*
+/backend/.env
+/backend/.env.*
 
-# vercel
+# Vercel deployment
 .vercel
 
-# typescript
+# Docker
+/docker-compose.override.yml
+/docker-compose.yaml
+/*.tar
+/*.log
+*.pid
+*.sock
+
+# NGINX
+/nginx.conf
+
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# Miscellaneous
+.DS_Store
+*.pem
+*.key
+*.crt
+
+# local environment
+.vscode/
+.idea/
+*.swp
+
+# Temporary files and caches
+/tmp
+/backend/tmp
+/frontend/tmp
+/.sass-cache
+/connect.lock
+/cache
+/coverage
+*.seed
+*.log
+*.pid
+*.pid.lock
+
+# macOS
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Files that might appear on external disks
+.Spotlight-V100
+.Trashes
+
+# Directories potentially created on remote macOS systems
+Desktop DB
+Desktop DF
+
+# Docker cleanup files
+*.bak
+*.old
+
+# Lock files
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+
+# Build artifacts
+*.o
+*.a
+*.out
+*.class
+
+# Temporary files
+*.tmp
+*.swp
+*.swo
+*.swn
+
+# Cache directories
+/.cache
+/frontend/.cache
+/backend/.cache
