--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,30 @@
+version: '3.8'
 services:
+  web:
+    image: nginx:latest
+    environment:
+      - API_URL=https://comiccreator.info/
+      - FRONTEND_URL=https://comic-generator-app.vercel.app/
+    volumes:
+      - ./nginx.template:/etc/nginx/templates/nginx.conf.template
+    command: /bin/bash -c "envsubst '\$API_URL \$FRONTEND_URL' < /etc/nginx/templates/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+    ports:
+      - "80:80"
+    depends_on:
+      - backend
+
   backend:
     build: ./backend
     ports:
-      - "3001:3001"
+      - "8080:8080"
     environment:
-      - PORT=3001
-      - DB_NAME=comicdb
-      - DB_USER=comicuser
-      - DB_PASSWORD=comicpass
-      - DB_HOST=db
-      - DB_PORT=5432
+      PORT: 8080
 
   db:
     image: postgres:15
     environment:
-      POSTGRES_USER: comicuser
-      POSTGRES_PASSWORD: comicpass
-      POSTGRES_DB: comicdb
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASSWORD}
+      POSTGRES_DB: mydatabase
     ports:
       - "5432:5432"
-
-  nginx:
-    image: nginx:latest
-    ports:
-      - "80:80"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - backend
