--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,36 +1,44 @@
 server {
     listen 80;
-    server_name comiccreator.info;
+    server_name comiccreator.info www.comiccreator.info;
+    
+    # Redirect HTTP to HTTPS
+    return 301 https://$host$request_uri;
+}
 
-    location /api/ {
-        proxy_pass ${API_URL};
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        
-        # Important for CORS
-        add_header 'Access-Control-Allow-Origin' 'https://comic-generator-app.vercel.app' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-        add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
-        
-        # Handle preflight requests
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' 'https://comic-generator-app.vercel.app' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-            add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            add_header 'Content-Length' 0;
-            return 204;
-        }
+server {
+    listen 443 ssl;
+    server_name comiccreator.info www.comiccreator.info;
+    
+    # SSL certificate configuration
+    ssl_certificate /etc/nginx/ssl/www.comiccreator.info_ssl_certificate.cer;
+    ssl_certificate_key /etc/nginx/ssl/www.comiccreator.info_private_key.key;
+    ssl_trusted_certificate /etc/nginx/ssl/www.comiccreator.info_chain.cer;
+    
+    # SSL settings for improved security
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+    
+    # CORS configuration
+    add_header 'Access-Control-Allow-Origin' 'https://comiccreator.info' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+    add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
+    add_header 'Access-Control-Allow-Credentials' 'true' always;
+    
+    if ($request_method = 'OPTIONS') {
+        return 204;
     }
-
+    
+    # Proxy settings for your ExpressJS backend
     location / {
-        proxy_pass ${FRONTEND_URL};
+        proxy_pass http://localhost:3000; # Adjust if your Express server runs on a different port
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_cache_bypass $http_upgrade;
     }
 }
