--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,9 +5,9 @@ services:
       - API_URL=http://backend:8080/
       - FRONTEND_URL=https://comic-generator-app.vercel.app/
     volumes:
-      - ./nginx.template:/etc/nginx/templates/nginx.conf.template
+      - ./nginx.template:/etc/nginx/nginx.template
       - /etc/nginx/ssl:/etc/nginx/ssl
-    command: /bin/bash -c "envsubst '\$API_URL \$FRONTEND_URL' < /etc/nginx/templates/nginx.conf.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
+    command: /bin/bash -c "envsubst '\$API_URL \$FRONTEND_URL' < /etc/nginx/nginx.template > /etc/nginx/nginx.conf && nginx -g 'daemon off;'"
     ports:
       - "80:80"
       - "443:443"
