--- a/nginx.template
+++ b/nginx.template
@@ -1,15 +1,19 @@
 worker_processes 1;
-
 events {
     worker_connections 1024;
 }
-
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
     sendfile        on;
     keepalive_timeout  65;
-
+    
+    # Remove this map since we're not using it
+    # map $request_method $cors_method {
+    #     OPTIONS 'true';
+    #     default 'false';
+    # }
+    
     server {
         listen 80;
         server_name comiccreator.info www.comiccreator.info;
@@ -17,7 +21,7 @@ http {
         # Redirect HTTP to HTTPS
         return 301 https://$host$request_uri;
     }
-
+    
     server {
         listen 443 ssl;
         server_name comiccreator.info www.comiccreator.info;
@@ -33,24 +37,30 @@ http {
         ssl_session_cache shared:SSL:10m;
         ssl_session_timeout 10m;
         
-        # CORS configuration
-        add_header 'Access-Control-Allow-Origin' '${FRONTEND_URL}' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-        add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
-        
-        if ($request_method = 'OPTIONS') {
-            return 204;
-        }
-        
-        # Proxy settings for your ExpressJS backend
+        # CORS handling
         location / {
-            proxy_pass ${API_URL};
+            # OPTIONS request handling
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'https://comic-generator-app.vercel.app' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+                add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
+                add_header 'Access-Control-Allow-Credentials' 'true' always;
+                add_header 'Content-Type' 'text/plain charset=UTF-8';
+                add_header 'Content-Length' '0';
+                return 204;
+            }
+            
+            # Forward to backend (NO CORS HEADERS HERE - THEY COME AFTER)
+            proxy_pass http://backend:8080;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
             proxy_set_header Host $host;
             proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
         }
     }
 }
