--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,14 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "pg": "^8.14.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.0",
+    "@types/pg": "^8.11.12",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
