--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,13 +20,20 @@ services:
       - "8080:8080"
     environment:
       PORT: 8080
+      DB_HOST: db # Critical: this must be 'db', not localhost
+      DB_PORT: 5432
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_NAME: ${DB_NAME}
+    depends_on:
+      - db
 
   db:
     image: postgres:15
     environment:
       POSTGRES_USER: ${DB_USER}
       POSTGRES_PASSWORD: ${DB_PASSWORD}
-      POSTGRES_DB: mydatabase
+      POSTGRES_DB: ${DB_NAME}
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
