--- a/backend/package.json
+++ b/backend/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
-    "pg": "^8.14.1"
+    "pg": "^8.14.1",
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
