--- a/backend/package.json
+++ b/backend/package.json
@@ -16,11 +16,12 @@
     "@aws-sdk/client-s3": "^3.787.0",
     "aws-jwt-verify": "^5.0.0",
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "pg": "^8.14.1",
-    "update": "^0.4.2"
+    "update": "^0.7.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
