--- a/nginx.template
+++ b/nginx.template
@@ -55,6 +55,10 @@ http {
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
 
+            proxy_connect_timeout   75s;
+            proxy_send_timeout      180s;
+            proxy_read_timeout      180s;
+
             add_header 'Access-Control-Allow-Origin' 'https://comic-generator-app.vercel.app' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
             add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
