--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
       - "8080:8080"
     environment:
       PORT: 8080
-      DB_HOST: db # Critical: this must be 'db', not localhost
+      DB_HOST: db # service name for the PostgreSQL database
       DB_PORT: 5432
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
