--- a/.gitignore
+++ b/.gitignore
@@ -1,131 +1,37 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-/frontend/node_modules
-/backend/node_modules
-/.pnp
-.pnp.*
-.yarn/*
-!.yarn/patches
-!.yarn/plugins
-!.yarn/releases
-!.yarn/versions
-
-# testing
-/coverage
-/frontend/coverage
-/backend/coverage
-
-# next.js
-/.next/
-/out/
-/frontend/.next/
-/frontend/out/
-
-# production
-/build
-/frontend/build
-/backend/dist
-
-# logs
-/logs
-/frontend/logs
-/backend/logs
+# ## General
+# Logs and OS-specific files
+logs
 *.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-/backend/dist/*.log
+.DS_Store
 
-# env files (can opt-in for committing if needed)
+# IDE and local environment files
+.vscode/
+.idea/
+
+# ## Dependencies
+# Ignore all node_modules folders in the project
+node_modules
+
+# ## Build Artifacts
+# Ignore standard build output directories
+dist
+build
+.next
+out
+
+# ## Monorepo
+# Ignore Turborepo cache
+.turbo
+
+# ## Environment
+# Ignore all environment files
+# We recommend committing a .env.example file
 .env
-.env.*
-/frontend/.env
-/frontend/.env.*
-/backend/.env
-/backend/.env.*
+.env*.local
 
-# Vercel deployment
-.vercel
-
-# Docker
-/docker-compose.override.yml
-# /docker-compose.yml
-/*.tar
-/*.log
-*.pid
-*.sock
-
-# NGINX
-/nginx.conf
-
-# TypeScript
+# ## Temporary
+# Ignore TypeScript build info cache
 *.tsbuildinfo
 next-env.d.ts
 
-# Miscellaneous
-.DS_Store
-*.pem
-*.key
-*.crt
-
-# local environment
-.vscode/
-.idea/
-*.swp
-
-# Temporary files and caches
-/tmp
-/backend/tmp
-/frontend/tmp
-/.sass-cache
-/connect.lock
-/cache
-/coverage
-*.seed
-*.log
-*.pid
-*.pid.lock
-
-# macOS
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-._*
-
-# Files that might appear on external disks
-.Spotlight-V100
-.Trashes
-
-# Directories potentially created on remote macOS systems
-Desktop DB
-Desktop DF
-
-# Docker cleanup files
-*.bak
-*.old
-
-# Lock files
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
-
-# Build artifacts
-*.o
-*.a
-*.out
-*.class
-
-# Temporary files
-*.tmp
-*.swp
-*.swo
-*.swn
-
-# Cache directories
-/.cache
-/frontend/.cache
-/backend/.cache
+prisma
