--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "description": "",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
+    "@prisma/client": "^6.16.2",
     "aws-jwt-verify": "^5.0.0",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
@@ -29,6 +30,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.0",
     "@types/pg": "^8.11.12",
+    "prisma": "^6.16.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
