fix: Complete Phase 1.1 - Add missing types and dependencies
- Add ComicContextType from frontend context
- Add unified GeneratedImageData type (replaces both frontend/backend versions)
- Add aws-amplify dependency for auth types
- Add missing Zod schemas for all new types
- Unify naming conventions across frontend/backend
- Ensure complete type coverage for SSoT principle

Phase 1.1 now truly complete with no gaps

--- a/packages/common-types/package.json
+++ b/packages/common-types/package.json
@@ -33,7 +33,8 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "zod": "^3.22.0"
+    "zod": "^3.22.0",
+    "aws-amplify": "^6.14.3"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
