feat: Complete Phase 1 - Monorepo package foundation
✅ PHASE 1.1: Create @repo/common-types package
- Extract all shared TypeScript types from frontend/backend
- Create comprehensive Zod schemas for runtime validation
- Support modular imports (domain, api, utils, schemas)
- Include all domain types: Comic, Panel, User, Auth, etc.
- Include all API contracts: requests, responses, DTOs
- Include all utility types: API client, interceptors, etc.

✅ PHASE 1.2: Create @repo/utils package
- Extract all shared utility functions
- Support modular imports for individual utilities
- Include: cn, id, date, string, file, debounce, delay, validation
- Add comprehensive validation utilities with Zod

✅ PHASE 1.3: Complete monorepo infrastructure
- Add missing root dependencies (TypeScript, @types/node)
- Update turbo.json with typecheck task
- Fix TypeScript configuration for CommonJS compatibility
- Verify all packages build and import correctly
- Test package integration with Node.js

🎯 PHASE 1 COMPLETE: Solid foundation for SSoT principle
- All shared types centralized in @repo/common-types
- All shared utilities centralized in @repo/utils
- Monorepo build pipeline working correctly
- Packages ready for consumption by apps
- Ready to proceed to Phase 2: App integration

--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "scripts": {
     "build": "turbo build",
     "dev": "turbo dev",
-    "lint": "turbo lint"
+    "lint": "turbo lint",
+    "typecheck": "turbo typecheck"
   },
   "workspaces": [
     "apps/*",
     "packages/*"
   ],
   "devDependencies": {
-    "turbo": "latest"
+    "turbo": "latest",
+    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0"
   },
   "packageManager": "npm@10.8.3"
 }
