--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -53,10 +53,11 @@
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@repo/utils": "^0.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^3.2.0",
-    "lucide-react": "^0.468.0"
+    "lucide-react": "^0.468.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
