--- a/packages/typescript-config/package.json
+++ b/packages/typescript-config/package.json
@@ -2,7 +2,19 @@
   "name": "@repo/typescript-config",
   "version": "0.0.0",
   "private": true,
+  "main": "./index.js",
   "files": [
-    "react-library.json"
-  ]
+    "base.json",
+    "react-library.json",
+    "nextjs.json",
+    "node.json",
+    "index.js"
+  ],
+  "exports": {
+    ".": "./index.js",
+    "./base": "./base.json",
+    "./react-library": "./react-library.json",
+    "./nextjs": "./nextjs.json",
+    "./node": "./node.json"
+  }
 }
