--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -3,8 +3,24 @@
   "version": "0.0.0",
   "private": true,
   "main": "index.js",
+  "files": [
+    "index.js",
+    "nextjs.js",
+    "node.js",
+    "react-library.js"
+  ],
+  "exports": {
+    ".": "./index.js",
+    "./nextjs": "./nextjs.js",
+    "./node": "./node.js",
+    "./react-library": "./react-library.js"
+  },
   "dependencies": {
     "eslint-config-next": "^15.2.4",
-    "eslint-config-turbo": "^2.5.6"
+    "eslint-config-turbo": "^2.5.6",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint-plugin-react": "^7.34.0",
+    "eslint-plugin-react-hooks": "^4.6.0"
   }
 }
