--- a/packages/common-types/package.json
+++ b/packages/common-types/package.json
@@ -33,12 +33,12 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
-    "zod": "^3.22.0",
-    "aws-amplify": "^6.14.3"
+    "aws-amplify": "^6.14.3",
+    "zod": "^3.22.0"
   },
   "devDependencies": {
     "@repo/eslint-config": "*",
-    "@repo/typescript-config": "*",
+    "@repo/typescript-config": "^0.0.0",
     "@types/node": "^20.0.0",
     "typescript": "^5.0.0"
   }
