fix: correct architectural mistake and complete Phase 4
- Remove local ESLint config from backend (violates SSoT)
- Update shared ESLint config to use proper flat config format
- Add globals dependency to packages/eslint-config
- Fix backend lint script to use shared config with proper ignore patterns
- Fix 4 critical ESLint errors in backend:
  - Remove unused Request import in auth middleware
  - Comment out unused emailToInsert variable
  - Fix unused error variables in catch blocks
- Verify full app functionality:
  - Backend linting passes (0 errors, 224 warnings)
  - Frontend builds successfully
  - Backend builds successfully
  - Both apps run without issues
- Achieve complete SSoT compliance across all packages

Phase 4: Refactor Applications - COMPLETE ✅

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -1,22 +1,18 @@
 {
+  "extends": "@repo/typescript-config/node",
   "compilerOptions": {
-    "target": "es6",
-    "module": "commonjs",
-    "esModuleInterop": true,
-    "moduleResolution": "node",
     "types": [
       "node",
       "express"
     ],
-    "strict": true,
-    "skipLibCheck": true,
-    "forceConsistentCasingInFileNames": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "rootDir": "."
   },
   "include": [
     "src"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules",
+    "src/generated"
   ]
 }
