--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -7,6 +7,7 @@
     "dev": "ts-node -r dotenv/config src/index.ts",
     "start": "node dist/index.js",
     "build": "tsc",
+    "lint": "eslint src --ext .ts --config ../../packages/eslint-config/node.js --ignore-pattern 'src/generated/**/*'",
     "migrate:dev": "prisma migrate dev",
     "migrate:create": "prisma migrate dev --create-only",
     "migrate:resolve": "prisma migrate resolve"
@@ -18,6 +19,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.787.0",
     "@prisma/client": "^6.16.2",
+    "@repo/common-types": "^0.0.0",
+    "@repo/utils": "^0.0.0",
     "aws-jwt-verify": "^5.0.0",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
@@ -28,11 +31,14 @@
     "update": "^0.7.4"
   },
   "devDependencies": {
+    "@eslint/eslintrc": "^3",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.14.0",
     "@types/pg": "^8.11.12",
+    "eslint": "^9",
+    "globals": "^16.4.0",
     "prisma": "^6.16.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
