--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -16,11 +16,14 @@
     "./react-library": "./react-library.js"
   },
   "dependencies": {
-    "eslint-config-next": "^15.2.4",
-    "eslint-config-turbo": "^2.5.6",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
+    "eslint-config-next": "^15.2.4",
+    "eslint-config-turbo": "^2.5.6",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0"
+  },
+  "devDependencies": {
+    "globals": "^16.4.0"
   }
 }
