feat: complete Phase 5.2 - update turbo.json with lint dependencies
- Add 'dependsOn: ["^lint"]' to lint task
- Ensures packages are linted before apps in monorepo
- Completes Phase 5.2 of SSoT refactoring plan
- Enables proper build orchestration across entire monorepo

--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,9 @@
     "typecheck": {
       "dependsOn": ["^typecheck"]
     },
-    "lint": {},
+    "lint": {
+      "dependsOn": ["^lint"]
+    },
     "dev": {
       "cache": false,
       "persistent": true
