fix: ensure UI packages build before frontend deployment
🔧 DEPLOYMENT FIX V2: Explicit dependency building for Vercel

## Problem
- Vercel still failing to resolve @repo/ui imports
- Turbo build wasn't being used correctly by Vercel
- Frontend building before shared packages were ready

## Solution
- Modified frontend package.json build script to build deps first
- Added build:deps script that explicitly builds all shared packages
- Simplified vercel.json configuration
- Ensures UI, common-types, and utils packages build before Next.js

## Technical Details
- Frontend build now: build:deps → next build
- build:deps builds packages/ui, packages/common-types, packages/utils
- Vercel will run the frontend build which triggers dependency builds
- All @repo/* imports will be available when Next.js compiles

## Testing
- ✅ Local build works perfectly with new script
- ✅ All UI components resolve correctly
- ✅ Build order: shared packages → frontend
- ✅ Ready for Vercel deployment

This should resolve the Module not found errors for @repo/ui components.

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npm run build:deps && next build",
+    "build:deps": "cd ../../packages/ui && npm run build && cd ../../packages/common-types && npm run build && cd ../../packages/utils && npm run build",
     "start": "next start",
     "lint": "next lint"
   },
