fix: correct package build dependency order
🔧 DEPLOYMENT FIX V3: Fix dependency build sequence

## Problem
- UI package was trying to build before utils package
- @repo/ui depends on @repo/utils (imports cn utility)
- Build failing with 'Cannot find module @repo/utils'

## Solution
- Fixed build order in frontend package.json build:deps script
- Correct sequence: utils → common-types → ui
- Each package builds completely before next one starts

## Build Order
1. ✅ packages/utils (no dependencies)
2. ✅ packages/common-types (may use utils)
3. ✅ packages/ui (uses utils via cn import)
4. ✅ frontend (uses all packages)

## Testing
- ✅ build:deps script works correctly
- ✅ Full frontend build succeeds
- ✅ All @repo/* imports resolve
- ✅ Ready for Vercel deployment

This should resolve the TypeScript compilation errors in the UI package.

--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "npm run build:deps && next build",
-    "build:deps": "cd ../../packages/ui && npm run build && cd ../../packages/common-types && npm run build && cd ../../packages/utils && npm run build",
+    "build:deps": "cd ../../packages/utils && npm run build && cd ../../packages/common-types && npm run build && cd ../../packages/ui && npm run build",
     "start": "next start",
     "lint": "next lint"
   },
