fix: correct vercel.json build configuration for monorepo
🔧 DEPLOYMENT FIX V5: Fix Vercel path configuration

## Problem
- Vercel looking for build output in wrong path
- Error: routes-manifest.json not found at /apps/frontend/apps/frontend/.next/
- Path duplication due to incorrect outputDirectory configuration

## Solution
- Updated buildCommand to use 'npx turbo build --filter=comic-creator'
- This builds only frontend app and its dependencies via turbo
- Correct outputDirectory: 'apps/frontend/.next' (from root context)
- Added framework: null to prevent auto-detection conflicts

## Technical Details
- Turbo handles dependency graph automatically
- --filter=comic-creator builds only frontend + dependencies
- Runs from monorepo root with correct path resolution
- All shared packages built before frontend

## Testing
- ✅ npx turbo build --filter=comic-creator works locally
- ✅ Builds utils → common-types → ui → frontend
- ✅ Output in correct location: apps/frontend/.next
- ✅ All dependencies resolved

This should resolve the routes-manifest.json path error.

--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npx turbo build --filter=comic-creator",
   "outputDirectory": "apps/frontend/.next",
-  "installCommand": "npm install"
+  "installCommand": "npm install",
+  "framework": null
 }
