fix: force Railway to use railway.json by removing auto-detected Dockerfile
🐳 RAILWAY BUILD FIX V3: Eliminate auto-detection conflict

## Problem
- Railway auto-detection overriding railway.json configuration
- Still using apps/backend/Dockerfile instead of Dockerfile.railway
- Build failing because backend Dockerfile can't access parent directories

## Solution
- Moved apps/backend/Dockerfile to apps/backend/Dockerfile.backup
- Railway can no longer auto-detect a Dockerfile
- Must use railway.json configuration pointing to Dockerfile.railway
- Dockerfile.railway has proper monorepo root context

## Technical Details
- Dockerfile.railway builds from root with full monorepo access
- Preserves SSoT architecture with @repo/* packages
- Backend package.json includes workspace dependencies
- Build process: utils → common-types → backend

## Expected Result
- Railway forced to use railway.json configuration
- Dockerfile.railway executes with proper root context
- All shared packages available during build
- Successful backend deployment maintaining SSoT structure

This preserves all SSoT progress while fixing Railway deployment.

--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node -r dotenv/config src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc",
+    "build": "npm run build:deps && tsc",
+    "build:deps": "cd ../../packages/utils && npm run build && cd ../../packages/common-types && npm run build",
     "lint": "eslint src --ext .ts --config ../../packages/eslint-config/node.js --ignore-pattern 'src/generated/**/*'",
     "migrate:dev": "prisma migrate dev",
     "migrate:create": "prisma migrate dev --create-only",
