fix: install dependencies from workspace root in Railway build
🐳 RAILWAY BUILD FIX V4: Fix workspace package resolution

## Problem
- npm ci failing to find @repo/common-types, @repo/utils
- Installing from backend directory can't resolve workspace packages
- Need to install from monorepo root for workspace resolution

## Solution
- Copy entire apps/backend directory (not just package.json)
- Run npm install from ROOT workspace context
- Remove separate backend npm install step
- Build shared packages after root workspace install

## Technical Details
- Root npm install resolves all @repo/* workspace packages
- Shared packages build in correct order: utils → common-types
- Backend build runs with all dependencies available
- Maintains proper workspace structure throughout

## Build Process
1. Copy workspace structure (root package.json, packages/, apps/backend/)
2. npm install from root (resolves @repo/* packages)
3. Build utils package
4. Build common-types package
5. Build backend with all dependencies available

This should resolve the npm 404 errors for workspace packages.

--- a/Dockerfile.railway
+++ b/Dockerfile.railway
@@ -13,10 +13,9 @@ COPY package*.json ./
 COPY packages ./packages
 
 # Copy backend package files
-COPY apps/backend/package*.json ./apps/backend/
-WORKDIR /app/apps/backend
+COPY apps/backend ./apps/backend
 
-# Install dependencies (workspace will resolve @repo/* packages)
+# Install dependencies from ROOT (workspace context)
 RUN npm install
 
 # Build shared packages first
@@ -27,11 +26,6 @@ RUN npm run build
 
 # Back to backend directory
 WORKDIR /app/apps/backend
-
-# Copy source code and Prisma schema
-COPY apps/backend/prisma ./prisma
-COPY apps/backend/src ./src
-COPY apps/backend/tsconfig.json ./tsconfig.json
 
 # Generate the Prisma client and build the TypeScript code
 RUN npx prisma generate
