feat: configure monorepo for Railpack custom build command
🚂 RAILWAY BUILD SETUP: Prepare for custom build command approach

## Changes Made
- Added build:packages script to root package.json for shared package builds
- Simplified railway.json to focus on deployment configuration
- Removed unused configuration files (railway.toml, .railwayignore)
- Cleaned up build process for Railpack compatibility

## Custom Build Command to Use in Railway
cd /app && npm install && npm run build:packages && cd apps/backend && rm -f package-lock.json && npm install && npm run build

## How This Works
1. Install from root (workspace context resolves @repo/* packages)
2. Build shared packages in dependency order (utils → common-types)
3. Go to backend, remove lock file, reinstall (uses workspace resolution)
4. Build backend with all dependencies available

## Railway Settings
- Builder: Keep as Railpack (default)
- Custom Build Command: Use the command above
- Start Command: Configured in railway.json

This maintains SSoT architecture while working within Railpack limitations.

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "scripts": {
     "build": "turbo build",
+    "build:packages": "cd packages/utils && npm run build && cd ../common-types && npm run build",
     "dev": "turbo dev",
     "lint": "turbo lint",
     "typecheck": "turbo typecheck"
