--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "comic-creator-monorepo",
   "private": true,
   "scripts": {
-    "build": "turbo build",
+    "build": "npm run build:packages && npm run build:backend",
     "build:packages": "cd packages/utils && npm run build && cd ../common-types && npm run build",
+    "build:backend": "cd apps/backend && mv package.json.bak package.json && npm install && npm run build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "typecheck": "turbo typecheck"
+    "typecheck": "turbo typecheck",
+    "start": "cd apps/backend && node dist/index.js"
   },
   "workspaces": [
     "apps/*",
