--- a/packages/common-types/package.json
+++ b/packages/common-types/package.json
@@ -39,8 +39,10 @@
   "devDependencies": {
     "@repo/eslint-config": "*",
     "@repo/typescript-config": "^0.0.0",
-    "@types/express": "^4.17.0",
     "@types/node": "^20.0.0",
     "typescript": "^5.0.0"
+  },
+  "peerDependencies": {
+    "@types/express": "^5.0.0"
   }
 }
