fix: resolve TypeScript compilation errors for backend build
🔧 DEPLOYMENT FIX V2: Fix TypeScript compilation issues

## Problem
- Backend TypeScript compilation failing silently
- Missing esModuleInterop configuration
- Missing OPENAI model exports in config
- Type import mismatches in comics service
- Incorrect rootDir in tsconfig.json

## Solution
- Fixed backend tsconfig.json: rootDir './src', proper includes
- Added OPENAI_CHAT_MODEL and OPENAI_IMAGE_MODEL exports to config
- Fixed crypto import: 'import * as crypto' instead of default import
- Simplified comics service types: local interfaces instead of missing exports
- Added null check for s3Client before use

## Technical Details
- TypeScript now compiles successfully and creates dist/index.js
- Backend build process: packages -> backend deps -> tsc compilation
- All import/export issues resolved
- Proper type safety maintained throughout

## Files Changed
- apps/backend/tsconfig.json - Fixed rootDir and includes
- apps/backend/src/config/index.ts - Added OpenAI model exports
- apps/backend/src/services/comics.service.ts - Fixed imports and types

## Expected Result
- npm run build creates apps/backend/dist/index.js successfully
- Railway deployment should find and execute the compiled backend
- Backend API endpoints should be functional
- SSoT monorepo fully operational on Railway

Ready for Railway deployment - the dist/index.js file now exists

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -6,10 +6,10 @@
       "express"
     ],
     "outDir": "./dist",
-    "rootDir": "."
+    "rootDir": "./src"
   },
   "include": [
-    "src"
+    "src/**/*"
   ],
   "exclude": [
     "node_modules",
