--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "build": "npm run build:packages && npm run build:backend",
     "build:packages": "cd packages/utils && npm run build && cd ../common-types && npm run build",
-    "build:backend": "cd apps/backend && mv package.json.bak package.json && npm install && npm run build",
+    "build:backend": "cd apps/backend && npm run build",
     "dev": "turbo dev",
     "lint": "turbo lint",
     "typecheck": "turbo typecheck",
