--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -14,6 +14,7 @@
     "@repo/common-types": "^0.0.0",
     "@repo/ui": "^0.0.0",
     "@repo/utils": "^0.0.0",
+    "autoprefixer": "^10.4.21",
     "aws-amplify": "^6.14.3",
     "lucide-react": "^0.544.0",
     "next": "15.2.4",
@@ -23,13 +24,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "autoprefixer": "^10.4.20",
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
-    "tailwindcss": "^4",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5"
   }
 }
