--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -28,8 +28,9 @@
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "next": "15.5.4",
     "pg": "^8.14.1",
-    "update": "^0.7.4"
+    "update": "^0.4.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
