--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -17,7 +17,7 @@
     "autoprefixer": "^10.4.21",
     "aws-amplify": "^6.14.3",
     "lucide-react": "^0.544.0",
-    "next": "15.2.4",
+    "next": "^15.5.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "tailwindcss-animate": "^1.0.7"
