--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "ts-node -r dotenv/config src/index.ts",
     "start": "node dist/index.js",
-    "build": "npm run build:deps && prisma generate && tsc",
+    "build": "npm run build:deps && tsc",
     "build:deps": "cd ../../packages/utils && npm run build && cd ../../packages/common-types && npm run build",
     "lint": "eslint src --ext .ts --config ../../packages/eslint-config/node.js --ignore-pattern 'src/generated/**/*'",
     "migrate:dev": "prisma migrate dev",
