--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "scripts": {
     "build": "npm run build:packages && npm run build:backend",
     "build:packages": "cd packages/utils && npm run build && cd ../common-types && npm run build",
-    "build:backend": "cd apps/backend && npx prisma generate --schema=../../prisma/schema.prisma && npm run build",
+    "build:backend": "cd apps/backend && npm run build",
     "dev": "turbo dev",
     "lint": "turbo lint",
     "typecheck": "turbo typecheck",
-    "start": "cd apps/backend && node dist/index.js"
+    "start": "cd apps/backend && node dist/index.js",
+    "postinstall": "npx prisma generate --schema=prisma/schema.prisma"
   },
   "workspaces": [
     "apps/*",
