railway fixed (hopefully) 4

--- a/apps/backend/tsconfig.json
+++ b/apps/backend/tsconfig.json
@@ -6,7 +6,9 @@
       "express"
     ],
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "declaration": false,
+    "declarationMap": false
   },
   "include": [
     "src/**/*"
