--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -29,7 +29,7 @@
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.20",
     "eslint": "^9",
-    "eslint-config-next": "15.2.4",
+    "eslint-config-next": "^15.5.4",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.4.0",
     "typescript": "^5"
