--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -8,7 +8,7 @@
     "start": "node dist/index.js",
     "build": "npm run build:deps && tsc",
     "build:deps": "cd ../../packages/utils && npm run build && cd ../../packages/common-types && npm run build",
-    "lint": "eslint src --ext .ts --config ../../packages/eslint-config/node.js --ignore-pattern 'src/generated/**/*'",
+    "lint": "eslint src --ext .ts --max-warnings 0",
     "migrate:dev": "prisma migrate dev",
     "migrate:create": "prisma migrate dev --create-only",
     "migrate:resolve": "prisma migrate resolve"
