feat: Enhanced UI/UX with auto-save, change detection, and error recovery
- Enhanced useComic hook with Phase 1 features:
  - Auto-save functionality (30s intervals for existing comics)
  - Change detection with debouncing
  - Draft persistence with localStorage
  - Retry logic with exponential backoff
  - Before unload warnings

- Added new hooks:
  - use-auto-save.ts - Auto-save with configurable intervals
  - use-before-unload-warning.ts - Browser warning for unsaved changes
  - use-change-detection.ts - Deep change detection with debouncing
  - use-draft-storage.ts - LocalStorage management for drafts
  - use-retry.ts - Retry logic with exponential backoff

- Enhanced ComicContextType with new properties:
  - hasChanges, isAutoSaving, lastAutoSave, autoSaveFailureCount
  - hasDraft, loadDraft, clearDraft, markAsSaved, triggerAutoSave
  - isRetrying, retryCount, canRetry, lastError

- Added error recovery system:
  - ErrorRecoveryProvider context for centralized error management
  - ErrorRecoveryBanner component in packages/ui (reusable)
  - Unified error handling across the app

- Added development demo page at /demo (gitignored)
- Updated .gitignore to exclude demo pages from production

All changes follow SSoT principles and maintain architectural boundaries.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ list-users.ts
 backfill-users-from-cognito.ts
 backfill-cognito-users.ts
 promote-user.ts
+
+# Development demo pages
+apps/frontend/src/app/demo/
