--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -23,6 +23,8 @@
     "@prisma/client": "^6.16.2",
     "@repo/common-types": "^0.0.0",
     "@repo/utils": "^0.0.0",
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "aws-jwt-verify": "^5.0.0",
     "axios": "^1.8.4",
     "cors": "^2.8.5",
@@ -45,7 +47,7 @@
     "@types/node": "^22.14.0",
     "@types/on-finished": "^2.3.5",
     "@types/pg": "^8.11.12",
-    "eslint": "^9",
+    "eslint": "^9.36.0",
     "globals": "^16.4.0",
     "prisma": "^6.16.2",
     "ts-node": "^10.9.2",
