--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -49,7 +49,11 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^8.45.0",
+    "@typescript-eslint/parser": "^8.45.0",
     "clsx": "^2.1.1",
+    "eslint": "^9.36.0",
+    "globals": "^16.4.0",
     "tailwind-merge": "^3.2.0",
     "zod": "^3.22.0"
   },
