--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -45,6 +45,18 @@
       "types": "./dist/textarea.d.ts",
       "default": "./dist/textarea.js"
     },
+    "./toast-notification": {
+      "types": "./dist/toast-notification.d.ts",
+      "default": "./dist/toast-notification.js"
+    },
+    "./accessibility": {
+      "types": "./dist/accessibility.d.ts",
+      "default": "./dist/accessibility.js"
+    },
+    "./error-recovery-banner": {
+      "types": "./dist/error-recovery-banner.d.ts",
+      "default": "./dist/error-recovery-banner.js"
+    },
     "./styles": "./styles/globals.css",
     "./styles/globals.css": "./styles/globals.css"
   },
