--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -57,6 +57,18 @@
       "types": "./dist/error-recovery-banner.d.ts",
       "default": "./dist/error-recovery-banner.js"
     },
+    "./skeleton-loader": {
+      "types": "./dist/skeleton-loader.d.ts",
+      "default": "./dist/skeleton-loader.js"
+    },
+    "./progress-indicator": {
+      "types": "./dist/progress-indicator.d.ts",
+      "default": "./dist/progress-indicator.js"
+    },
+    "./error-boundary": {
+      "types": "./dist/error-boundary.d.ts",
+      "default": "./dist/error-boundary.js"
+    },
     "./styles": "./styles/globals.css",
     "./styles/globals.css": "./styles/globals.css"
   },
