--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.899.0",
     "@aws-sdk/client-s3": "^3.787.0",
+    "@google/genai": "^1.23.0",
     "@prisma/client": "^6.16.2",
     "@repo/common-types": "^0.0.0",
     "@repo/utils": "^0.0.0",
