--- a/apps/backend/package.json
+++ b/apps/backend/package.json
@@ -24,6 +24,7 @@
     "@prisma/client": "^6.16.2",
     "@repo/common-types": "^0.0.0",
     "@repo/utils": "^0.0.0",
+    "@types/sharp": "^0.31.1",
     "@typescript-eslint/eslint-plugin": "^8.45.0",
     "@typescript-eslint/parser": "^8.45.0",
     "aws-jwt-verify": "^5.0.0",
@@ -37,6 +38,7 @@
     "otplib": "^12.0.1",
     "pg": "^8.14.1",
     "prom-client": "^15.1.3",
+    "sharp": "^0.34.4",
     "stripe": "^14.23.0",
     "update": "^0.7.4"
   },
